container'lar düzeltildi.

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         <p class="desc">Here you can find some of our latest works, to see the details of these works just click the thumbnails below.</p>
                     </div>
                     
-                    <div class="row">
+                     <div class="work-container">
                       <div class="col-lg-4 col-md-6 col-sm-6">
                           <div class="work">
                             <a data-fancybox="gallery" href="img/work/big/work-1.jpg" title="Modi sunt autem harum quae voluptate laboriosam enim ab aperiam, ducimus nam excepturi accusantium culpa rerum dolor asperiores omnis fugiat dignissimos voluptatibus!"><img class="img-responsive" src="img/work/small/work-1.jpg" alt="Featured Work"></a>
@@ -161,7 +161,7 @@
                         <p class="desc">We are a hard working group, who's aim is to listen to your problems and to come up with the best solution possible. We follow the lates trends on the web to create custom talierd niche websites.</p>
                     </div>
 
-                    <div class="row">
+                    <div class="team-container">
                         <div class="col-lg-3 col-md-3 col-sm-6">
                             <div class="team">
                                 <img src="img/team/team-1.jpg" class="img-circle" alt="Jack Long">
