form container eklendi.

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                     <div class="col-lg-12">
                         <p class="desc"></p>
                     </div>
-                    <div class="row">
+                    <div class="form-container">
                         <div class="col-lg-4 col-md-4">
                             <p>Where are we located?</p>
 
